[CST-346] working on the svg.render.addNodeRenderer.

--- a/src/visualization/www/scripts/css/main.css
+++ b/src/visualization/www/scripts/css/main.css
@@ -12,3 +12,12 @@
   shape-rendering: crispEdges;
   vector-effect: non-scaling-stroke;
 }
+
+svg:text {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
