--- a/cip/CipServer/packages/core/articles/public/views/create.html
+++ b/cip/CipServer/packages/core/articles/public/views/create.html
@@ -24,7 +24,7 @@
       <label mean-token="'permissions'" for="permissions" class="col-md-3 control-label">Permissions</label>
       <div class="col-md-9">
          <ui-select multiple ng-model="article.permissions" append-to-body="'true'" on-select="selectPermission()">
-            <ui-select-match placeholder="Select permissions..." ng-click="showDescendants();">{{$item}}</ui-select-match>
+            <ui-select-match placeholder="Select permissions..." >{{$item}}</ui-select-match>
             <ui-select-choices repeat="circle in availableCircles | filter:$select.search" name="permissions">
               {{circle}}
             </ui-select-choices>
