First version of CIP-UI

--- a/cip/CipServer/packages/core/system/server/views/includes/head.html
+++ b/cip/CipServer/packages/core/system/server/views/includes/head.html
@@ -9,15 +9,15 @@
   <title>{{appName}} - {{title}}</title>
   <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
   <meta name="keywords" content="node.js, express, mongoose, mongodb, angularjs, swig">
-  <meta name="description" content="MEAN - A Modern Stack: MongoDB, ExpressJS, AngularJS, NodeJS. (BONUS: Passport User Support).">
+  <meta name="description" content="CIP - A Modern Customer Intelligence Platform.">
 
   <meta property="fb:app_id" content="APP_ID">
   <meta property="og:title" content="{{appName}} - {{title}}">
-  <meta property="og:description" content="MEAN - A Modern Stack: MongoDB, ExpressJS, AngularJS, NodeJS. (BONUS: Passport User Support).">
+  <meta property="og:description" content="CIP - A Modern Customer Intelligence Platform.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="APP_URL">
   <meta property="og:image" content="APP_LOGO">
-  <meta property="og:site_name" content="MEAN - A Modern Stack">
+  <meta property="og:site_name" content="CIP - A Modern Customer Intelligence Platform">
   <meta property="fb:admins" content="APP_ADMIN">
 
   <link rel="manifest" href="/system/assets/static/manifest.json">
@@ -40,5 +40,10 @@
     <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+
+  <script src="/bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+  <script src="/bower_components/angular-sanitize/angular-sanitize.js"></script>
+  <script src="/bower_components/i18next/i18next.min.js"></script>
+  <script src="/bower_components/ng-i18next"></script>
 
 </head>
