--- a/cip/CipServer/packages/custom/cipmanager/public/views/index.html
+++ b/cip/CipServer/packages/custom/cipmanager/public/views/index.html
@@ -1,25 +1,46 @@
-<section data-ng-controller="CipmanagerController" data-ng-init="find()">
-    <ul class="list-group">
-        <li class="row list-group-item" data-ng-repeat="crowd in crowds">
-            <h4 class="col-md-12">
-                <a data-ng-href="/crowd/{{crowd.crowdName}}/edit">{{crowd.crowdName}}</a>
+<section data-ng-controller="CipmanagerController" data-ng-init="init()">
+    <table class="table table-hover">
+        <h4>人群列表</h4>
+        <thead>
+        <tr>
+            <th>选择</th>
+            <th>序号</th>
+            <th>人群名称</th>
+            <th>类型</th>
+            <th>覆盖人数</th>
+            <th>创建时间</th>
+            <th>操作</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr ng-repeat="crowd in crowds">
+            <td><input type="checkbox"></td>
+            <td>{{$index+1}}</td>
+            <td>{{crowd.crowdName}}</td>
+            <td>{{crowd.type}}</td>
+            <td>{{crowd.count}}</td>
+            <td>{{crowd.created | date:'yyyy-MM-dd'}}</td>
+            <td>
                 <span>
-                  <a class="btn" data-ng-href="/crowd/{{crowd.crowdName}}/edit">
-                      <i class="glyphicon glyphicon-edit"></i>
-                  </a>
-                  <a class="btn" data-ng-click="remove(crowd);">
-                      <i class="glyphicon glyphicon-trash"></i>
-                  </a>
+                  <a class="btn btn-info btn-xs" data-ng-href="/crowd/{{crowd.crowdName}}/edit">编辑</a>
+                  <a class="btn btn-info btn-xs" data-ng-href="/crowd/{{crowd.crowdName}}/userlist">下载</a>
+                  <button class="btn btn-danger btn-xs" data-ng-click="remove(crowd);">删除</button>
                 </span>
-            </h4>
-            <div class="col-md-10">Description: {{crowd.description}}</div>
-            <div class="col-md-3">Type: {{crowd.type}}</div>
-            <div class="col-md-3" ng-show="crowd.type == 'static'">TagId: {{crowd.tagId}}</div>
-            <div class="col-md-3">{{crowd.created | date:'medium'}}</div>
-        </li>
-    </ul>
-    <div class="col-md-2">
-        <button mean-token="'create-c-crowd'" data-ng-click="goToCreate()" class="btn btn-info btn-block">Create One
-        </button>
+            </td>
+        </tr>
+        </tbody>
+    </table>
+    <div class="col-md-offset-3">
+        <uib-pagination boundary-links="true" total-items="totalItems" ng-model="currentPage" class="pagination-sm" ng-change="pageChanged()"
+                        previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;" last-text="&raquo;" items-per-page="page_size">
+
+        </uib-pagination>
     </div>
+    <div class="col-md-2">
+        <button mean-token="'create-c-crowd'" data-ng-click="goToCreate()" class="btn btn-info btn-block">创建新的人群</button>
+    </div>
+    <div class="col-md-2">
+        <button mean-token="'create-c-crowd'" data-ng-click="createGroup()" class="btn btn-info btn-block">创建人群组合</button>
+    </div>
+
 </section>
