--- a/cip/CipServer/packages/custom/cipmanager/public/views/userlist.html
+++ b/cip/CipServer/packages/custom/cipmanager/public/views/userlist.html
@@ -97,7 +97,7 @@
         </uib-pagination>
     </div>
     <div class="col-md-2">
-        <button mean-token="'create-c-crowd'" data-ng-click="" class="btn btn-info btn-block">下载UID集合
-        </button>
+        <a mean-token="'create-c-crowd'" target="_blank" href="/api/download/uid.csv" class="btn btn-info btn-block">下载UID集合
+        </a>
     </div>
 </section>
