--- a/cip/CipServer/packages/custom/cipmanager/public/views/edit.html
+++ b/cip/CipServer/packages/custom/cipmanager/public/views/edit.html
@@ -36,15 +36,32 @@
             <!-- Edit -->
             <div class="form-group row">
                 <div class="col-md-2">
-                    <ui-select ng-model="factors.condition_type" append-to-body="'true'">
-                        <ui-select-match placeholder="条件类型">{{factors.condition_type}}
-                        </ui-select-match>
-                        <ui-select-choices repeat=" x in condition_type | filter:$select.search">{{x}}
-                        </ui-select-choices>
-                    </ui-select>
+                    <h5>标签分类体系</h5>
                 </div>
+                <div class="col-md-2" ng-if="factors.type != 'behavior' && factors.type">
+                    <h5>标签</h5>
+                </div>
+                <div class="col-md-2" ng-if="factors.type != 'behavior' && factors.type">
+                    <h5>逻辑</h5>
+                </div>
+                <div class="col-md-2" ng-if="factors.type != 'behavior' && factors.type">
+                    <h5>权重</h5>
+                </div>
+
+                <!-- Behavior-->
+                <div class="col-md-2" ng-if="factors.type == 'behavior'">
+                    <h5>动作</h5>
+                </div>
+                <div class="col-md-2" ng-if="factors.type == 'behavior' && object_category.length>0">
+                    <h5>对象</h5>
+                </div>
+                <div class="col-md-offset-1 col-md-4" ng-if="factors.type == 'behavior' && object_category.length>0">
+                    <h5>对象所属类目/属性体系</h5>
+                </div>
+            </div>
+            <div class="form-group row">
                 <!-- For ontology -->
-                <div class="col-md-2" ng-if="factors.condition_type == 'ontology'">
+                <div class="col-md-2">
                     <ui-select ng-model="factors.type" append-to-body="'true'">
                         <ui-select-match placeholder="标签体系">{{factors.type}}
                         </ui-select-match>
@@ -52,90 +69,102 @@
                         </ui-select-choices>
                     </ui-select>
                 </div>
-                <div class="col-md-2" ng-if="factors.condition_type == 'ontology'">
+                <div class="col-md-2" ng-if="factors.type != 'behavior' && factors.type && factor_tag.length > 0">
                     <ui-select ng-model="factors.factor" append-to-body="'true'">
                         <ui-select-match placeholder="标签">{{factors.factor}}</ui-select-match>
                         <ui-select-choices repeat=" x in factor_tag | filter:$select.search">{{x}}
                         </ui-select-choices>
                     </ui-select>
                 </div>
-                <div class="col-md-2" ng-if="factors.condition_type == 'ontology'">
+                <div class="col-md-2" ng-if="factors.type != 'behavior' && factors.type && factor_tag.length <= 0">
+                    <input name="factor" type="text" class="form-control" ng-model="factors.factor" placeholder="标签">
+                </div>
+                <div class="col-md-2" ng-if="factors.type != 'behavior' && factors.type">
                     <ui-select ng-model="factors.operator" append-to-body="'true'">
                         <ui-select-match placeholder="逻辑">{{factors.operator}}</ui-select-match>
                         <ui-select-choices repeat=" x in operator | filter:$select.search">{{x}}
                         </ui-select-choices>
                     </ui-select>
                 </div>
-                <div class="col-md-2"
-                     ng-if="factors.condition_type == 'ontology' && factors.operator != 'like' && factors.operator != 'dislike'">
+                <div class="col-md-2"  ng-if="factors.type != 'behavior' && factors.type && factors.operator != 'like' && factors.operator != 'dislike'">
                     <input name="weight" type="number" min=0 max=1 class="form-control" ng-model="factors.weight" placeholder="权重(0-1范围之间)">
                 </div>
 
                 <!-- For behavior -->
-                <div class="col-md-2" ng-if="factors.condition_type == 'behavior'">
+                <div class="col-md-2" ng-if="factors.type == 'behavior'">
                     <ui-select ng-model="factors.action" append-to-body="'true'">
                         <ui-select-match placeholder="动作">{{factors.action}}</ui-select-match>
                         <ui-select-choices repeat=" x in action | filter:$select.search">{{x}}
                         </ui-select-choices>
                     </ui-select>
                 </div>
-                <div class="col-md-2" ng-if="factors.condition_type == 'behavior' && object_category.length>0">
+                <div class="col-md-2" ng-if="factors.type == 'behavior' && object_category.length>0">
                     <ui-select ng-model="factors.objectCategory" append-to-body="'true'">
-                        <ui-select-match placeholder="对象分类">{{factors.objectCategory}}</ui-select-match>
+                        <ui-select-match placeholder="对象">{{factors.objectCategory}}</ui-select-match>
                         <ui-select-choices repeat=" x in object_category | filter:$select.search">{{x}}
                         </ui-select-choices>
                     </ui-select>
                 </div>
-                <div class="col-md-2" ng-if="factors.condition_type == 'behavior' && object_category.length>0">
+                <div class="col-md-2" ng-if="factors.type == 'behavior' && object_category.length>0">
                     <ui-select ng-model="factors.objectType" append-to-body="'true'">
-                        <ui-select-match placeholder="对象类型">{{factors.objectType}}</ui-select-match>
-                        <ui-select-choices repeat=" x in object_type | filter:$select.search">{{x}}
+                        <ui-select-match placeholder="对象类型">{{$select.selected.name}}</ui-select-match>
+                        <ui-select-choices repeat="x.id as x in object_type | filter:$select.search">{{x.name}}
                         </ui-select-choices>
                     </ui-select>
                 </div>
-                <div class="col-md-2" ng-if="factors.condition_type == 'behavior' && factors.objectType == 'Category' && object_category.length>0">
+                <div class="col-md-2" ng-if="factors.type == 'behavior' && factors.objectType == 'Category' && object_category.length>0">
                     <ui-select ng-model="factors.ontologyType" append-to-body="'true'">
                         <ui-select-match placeholder="ontology类型">{{factors.ontologyType}}</ui-select-match>
                         <ui-select-choices repeat=" x in behavior_ontology_type | filter:$select.search">{{x}}
                         </ui-select-choices>
                     </ui-select>
                 </div>
-                <div class="col-md-2" ng-if="factors.condition_type == 'behavior' && factors.objectType == 'Category' && object_category.length>0">
+                <div class="col-md-2" ng-if="factors.type == 'behavior' && factors.objectType == 'Category' && object_category.length>0 && object_id.length>0">
                     <ui-select ng-model="factors.objectId" append-to-body="'true'">
                         <ui-select-match placeholder="对象值">{{factors.objectId}}</ui-select-match>
                         <ui-select-choices repeat=" x in object_id | filter:$select.search">{{x}}
                         </ui-select-choices>
                     </ui-select>
                 </div>
-                <div class="col-md-2" ng-if="factors.condition_type == 'behavior' && factors.objectType != 'Category' && object_category.length>0">
+                <div class="col-md-2" ng-if="factors.type == 'behavior' && object_category.length>0 &&
+                    (factors.objectType != 'Category' ||(factors.objectType == 'Category') && object_id.length<=0)">
                     <input name="item_id" type="text" class="form-control" ng-model="factors.objectId"
                            placeholder="Item Id">
                 </div>
             </div>
             <div class="form-group row">
-                <div class="col-md-2" ng-if="factors.condition_type == 'behavior'">
+                <!-- Behavior-->
+                <div class="col-md-4" ng-if="factors.type == 'behavior' && factors.action">
+                    <h5>发生次数</h5>
+                </div>
+                <div class="col-md-4" ng-if="factors.type == 'behavior' && factors.action">
+                    <h5>发生时间</h5>
+                </div>
+            </div>
+            <div class="form-group row">
+                <div class="col-md-2" ng-if="factors.type == 'behavior' && factors.action">
                     <ui-select ng-model="factors.operator" append-to-body="'true'">
                         <ui-select-match placeholder="逻辑">{{factors.operator}}</ui-select-match>
                         <ui-select-choices repeat=" x in behavior_operator | filter:$select.search">{{x}}
                         </ui-select-choices>
                     </ui-select>
                 </div>
-                <div class="col-md-2" ng-if="factors.condition_type == 'behavior'">
+                <div class="col-md-2" ng-if="factors.type == 'behavior' && factors.action">
                     <input name="object_value" type="number" class="form-control" ng-model="factors.value"
                            placeholder="值">
                 </div>
-                <div class="col-md-2" ng-if="factors.condition_type == 'behavior'">
+                <div class="col-md-2" ng-if="factors.type == 'behavior' && factors.action">
                     <ui-select ng-model="factors.timeType" append-to-body="'true'">
                         <ui-select-match placeholder="日期类型">{{factors.timeType}}</ui-select-match>
                         <ui-select-choices repeat=" x in date_type | filter:$select.search">{{x}}
                         </ui-select-choices>
                     </ui-select>
                 </div>
-                <div class="col-md-2" ng-show="factors.condition_type == 'behavior' && factors.timeType == 'relative'">
+                <div class="col-md-2" ng-show="factors.type == 'behavior' && factors.timeType == 'relative'">
                     <input name="time_start" type="number" class="form-control" ng-model="st"
                            placeholder="过去N天">
                 </div>
-                <div class="col-md-2" ng-show="factors.condition_type == 'behavior' && factors.timeType == 'absolute'">
+                <div class="col-md-2" ng-show="factors.type == 'behavior' && factors.timeType == 'absolute'">
                     <p class="input-group">
                         <input type="text" class="form-control" uib-datepicker-popup="{{format}}"
                                ng-model="st" is-open="popup1.opened" min-date="minDate" max-date="maxDate"
@@ -146,7 +175,7 @@
                           </span>
                     </p>
                 </div>
-                <div class="col-md-2" ng-show="factors.condition_type == 'behavior' && factors.timeType == 'absolute'">
+                <div class="col-md-2" ng-show="factors.type == 'behavior' && factors.timeType == 'absolute'">
                     <p class="input-group">
                         <input type="text" class="form-control" uib-datepicker-popup="{{format}}"
                                ng-model="et" is-open="popup2.opened" min-date="minDate" max-date="maxDate"
@@ -161,7 +190,7 @@
 
             <div class="col-md-offset-10 col-md-2">
                 <button mean-token="'create-add-factor'" type="button"
-                        ng-click="addFactor(factors.condition_type)" class="btn btn-info btn-block">添加条件
+                        ng-click="addFactor(factors.type)" class="btn btn-info btn-block">添加条件
                 </button>
             </div>
         </fieldset>
@@ -171,7 +200,6 @@
             <legend>条件列表</legend>
 
             <table class="table table-hover">
-                <h5>Ontology</h5>
                 <thead>
                 <tr>
                     <th>序号</th>
@@ -204,7 +232,6 @@
             </table>
 
             <table class="table table-hover">
-                <h5>Behavior</h5>
                 <thead>
                 <tr>
                     <th>序号</th>
@@ -224,7 +251,9 @@
                     <td>{{condition.action}}</td>
                     <td>{{condition.objectCategory}}</td>
                     <td>{{condition.objectType}}</td>
-                    <td>{{condition.ontologyType}}/{{condition.objectId}}</td>
+                    <td ng-if="condition.objectType=='Category'">{{condition.ontologyType}}/{{condition.objectId}}</td>
+                    <td ng-if="condition.objectType=='Contains'">{{condition.objectId}}</td>
+                    <td ng-if="condition.objectType=='Item'">{{condition.objectId}}</td>
                     <td>{{condition.operator}} {{condition.value}}次</td>
                     <td ng-if="condition.timeType=='absolute'">{{condition.startTime | date:'shortDate'}}--{{condition.endTime | date:'shortDate'}}</td>
                     <td ng-if="condition.timeType=='relative'">过去{{condition.startTime}}天内</td>
