Refactor CIP UI

--- a/cip/CipServer/packages/core/system/public/views/index.html
+++ b/cip/CipServer/packages/core/system/public/views/index.html
@@ -6,7 +6,7 @@
       <div class="packages">
         <h3>Features</h3>
         <div class="package">
-          <h4><a href="/crowd/main">Crowding Manager</a></h4>
+          <h4>Crowding Manager</h4>
           <p>"Manager your crowds easily.</p>
         </div>
       </div>
