--- a/cip/CipServer/packages/custom/cipmanager/public/views/createGroup.html
+++ b/cip/CipServer/packages/custom/cipmanager/public/views/createGroup.html
@@ -60,9 +60,17 @@
         </uib-pagination>
     </div>
 
-    <div class="col-md-offset-1 col-md-10 row" ng-if="groupDetail.selector.length>0">
+    <div class="col-md-10 row" ng-if="groupDetail.selector.length>0">
         <table class="table table-hover">
-            <caption>人群选择列表</caption>
+            <h5>已选人群:</h5>
+            <div class="col-md-2"><h6>人群组合逻辑:</h6></div>
+            <div class="col-md-2">
+                <ui-select ng-model="groupDetail.logic" append-to-body="'true'">
+                    <ui-select-match placeholder="人群组合逻辑">{{groupDetail.logic}}</ui-select-match>
+                    <ui-select-choices repeat=" x in group_logic | filter:$select.search">{{x}}
+                    </ui-select-choices>
+                </ui-select>
+            </div>
             <thead>
             <tr>
                 <th>序号</th>
@@ -88,13 +96,8 @@
     </div>
 
     <div class="form-group">
-        <div class="col-md-offset-3 col-md-3">
+        <div class="col-md-offset-4 col-md-3">
             <button mean-token="'create-save'" type="submit" ng-disabled="groupForm.$invalid" class="btn btn-success btn-block">保存组合</button>
-        </div>
-        <div class="col-md-3">
-            <a mean-token="'create-save'" type="button" ng-disabled="groupForm.$invalid" class="btn btn-success btn-block" ng-href="/crowd/group/{{groupDetail.crowdName}}/userlist">
-                查看/下载UID集合
-            </a>
         </div>
     </div>
     </form>
