--- a/cip/CipServer/packages/custom/cipmanager/public/assets/css/cipmanager.css
+++ b/cip/CipServer/packages/custom/cipmanager/public/assets/css/cipmanager.css
@@ -1,3 +1,9 @@
 .cipmanager-example h1 {
   background-color: purple
 }
+
+.center-vertical {
+  position:relative;
+  top:50%;
+  transform:translateY(-50%);
+}
