--- a/cip/CipServer/packages/custom/cipmanager/public/views/userlist.html
+++ b/cip/CipServer/packages/custom/cipmanager/public/views/userlist.html
@@ -49,7 +49,7 @@
     <fieldset>
         <legend>用户列表明细</legend>
         <div class="col-md-6">
-        <table class="table table-hover table-bordered">
+        <table class="table table-hover table-bordered" ng-if="userList.length>0">
             <thead>
             <tr>
                 <th>序号</th>
@@ -73,14 +73,14 @@
         </div>
     </fieldset>
 
-    <div class="col-md-offset-2 row">
+    <div class="col-md-offset-2 row" ng-if="userList.length>0">
         <uib-pagination boundary-links="true" total-items="userCount" ng-model="currentUserListPage" class="pagination-sm" ng-change="pageUserListChanged()"
                         previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;" last-text="&raquo;" items-per-page="page_size">
 
         </uib-pagination>
     </div>
     <div class="col-md-2">
-        <a mean-token="'create-c-crowd'" target="_blank" href="/api/download/uid.csv" class="btn btn-info btn-block">下载UID集合
-        </a>
+        <a target="_self" id="downloadUserlist" href="/api/download?file={{crowdDetail.file}}" download="userlist.xml" class="btn btn-info btn-block" ng-if="userList.length>0">下载UID集合</a>
+
     </div>
 </section>
